# mplcopy

./: README.rst  pyproject.toml  setup.py
src/: mplcopy.py
